statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-test
spec:
  selector:
    matchLabels:
      app: sts-test # has to match .spec.template.metadata.labels
  replicas: 3
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: sts-test # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 9
      containers:
        - name: busybox
          image: busybox:stable
          command:
            - sleep
          args:
            - infinity
